fix: Safari z-index rendering bug

--- a/responsive.less
+++ b/responsive.less
@@ -40,7 +40,7 @@
 			overflow-y: auto;
 			max-height: 100%;
 			max-height: ~"calc(100vh - @{mobile-head-base-height} + 2px)";
-			
+			transform: translateZ(150px);
 
             .portal {
                 display: block;
